[package]
name = "game-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunny-cdn-wrapper = { git = "https://github.com/ViridianLink/bunny-cdn-wrapper" }
bitflags = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
lazy_static = { version = "*", default-features = false }
regex = { version = "*", default-features = false }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
walkdir = { version = "*", default-features = false }
zip = { version = "*", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
